# bilibili-down

./: .gitignore  README.md  pyproject.toml
src/bilibili_api/: __init__.py  bilibili_api.py  parse_types.py
src/tools/: files.py  types.py
src/ui/: __init__.py
src/web_parser/: document_parse.py  headers.py  m3u.py
tests/bilibili_api/: test_bilibili_api.py
